--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-    "name": "befe-crud-project",
-    "version": "1.0.0",
-    "description": "",
-    "type": "module",
-    "main": "index.js",
-    "scripts": {
-        "start": "node backend/server.js",
-        "server": "nodemon backend/server.js",
-        "client": "npm run dev --prefix frontend",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "aws-sdk": "^2.1427.0",
-        "bcryptjs": "^2.4.3",
-        "concurrently": "^8.2.0",
-        "cookie-parser": "^1.4.6",
-        "dotenv": "^16.3.1",
-        "experss": "^0.0.1-security",
-        "express": "^4.18.2",
-        "express-async-handler": "^1.2.0",
-        "jsonwebtoken": "^9.0.1",
-        "mongoose": "^7.4.1"
-    }
+  "name": "befe-crud-project",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js",
+    "client": "npm run dev --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.1427.0",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "experss": "^0.0.1-security",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.1"
+  }
 }
