--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.382.0",
     "aws-sdk": "^2.1427.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.0",
